# ai-genai-llm-explainability

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: .env.example  settings.development.yaml  settings.production.yaml  settings.yaml
src/llm_explainability/: __init__.py  exceptions.py
src/llm_explainability/aggregator/: __init__.py  aggregator.py
src/llm_explainability/aggregator/formatters/: __init__.py  json_formatter.py
src/llm_explainability/api/: __init__.py  app.py  dependencies.py
src/llm_explainability/api/middleware/: __init__.py  error_handler.py  logging.py  security.py
src/llm_explainability/api/routers/: __init__.py  explain.py  health.py  providers.py
src/llm_explainability/api/schemas/: __init__.py  requests.py  responses.py
src/llm_explainability/config/: __init__.py  constants.py  loader.py  settings.py
src/llm_explainability/dashboard/: __init__.py  api_client.py  app.py
src/llm_explainability/dashboard/components/: __init__.py  cot_diagram.py  shap_plot.py  sidebar.py  token_heatmap.py
src/llm_explainability/dashboard/pages/: __init__.py
src/llm_explainability/explainers/: __init__.py  base.py  registry.py
src/llm_explainability/explainers/chain_of_thought/: __init__.py  engine.py  (+3 more)
src/llm_explainability/logging/: __init__.py  processors.py  setup.py
src/llm_explainability/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  huggingface_provider.py  models.py  ollama_provider.py  openai_provider.py
src/llm_explainability/security/: __init__.py  input_sanitizer.py  rate_limiter.py  secrets_manager.py
src/llm_explainability/utils/: __init__.py  async_helpers.py  caching.py  tokenizer.py  validators.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_api_endpoints.py
tests/unit/: __init__.py
tests/unit/test_aggregator/: __init__.py
tests/unit/test_config/: __init__.py  test_loader.py  test_settings.py
tests/unit/test_explainers/: __init__.py
tests/unit/test_providers/: __init__.py  test_factory.py
tests/unit/test_security/: __init__.py  test_input_sanitizer.py  test_rate_limiter.py
tests/unit/test_utils/: __init__.py  test_tokenizer.py  test_validators.py
(+15 files in other folders)
